minor upgrade for hyprlock

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -34,7 +34,7 @@ label {
     text = cmd[update:1000] echo -e "$(date +"%A, %B %d")"
     color = rgba(216, 222, 233, .7)
     font_size = 28
-    font_family = SF Pro Display Bold
+    font_family = Ubuntu
     position = 0, 490
     halign = center
     valign = center
@@ -64,8 +64,8 @@ label {
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    font_size = 18
-    font_family = SF Pro Display Bold
+    font_size = 24
+    font_family = Ubuntu
     position = 0, -180
     halign = center
     valign = center
@@ -83,8 +83,8 @@ input-field {
     inner_color = rgba(255, 255, 255, 0.1)
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    font_family = SF Pro Display Bold
-    placeholder_text = <i><span foreground="##ffffff99">🔒 Enter Pass</span></i>
+    font_family = Ubuntu
+    placeholder_text = <i><span foreground="##ffffff99">󰌾 Enter Pass</span></i>
     hide_input = false
     position = 0, -250
     halign = center
