--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -245,10 +245,14 @@ windowrule = size 600 400, title:(Open File)
 windowrulev2 = float, class:^(firefoxdeveloperedition)
 windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
 windowrulev2 = center, class:^(firefoxdeveloperedition)
+
 windowrulev2 = float, title:^(Picture-in-Picture)
 windowrulev2 = size 400 220, title:^(Picture-in-Picture)
 windowrulev2 = move 100%-w-10 100%-w-35, title:^(Picture-in-Picture)
 windowrulev2 = pin, title:^(Picture-in-Picture)
+windowrule = roundingpower 2.0, title:^(Picture-in-Picture)
+windowrule = rounding 2, title:^(Picture-in-Picture)
+
 # windowrule for Brave dev tools when it's detatch form window
 windowrulev2 = float, title:^(DevTools)
 windowrulev2 = size 1100 700, title:^(DevTools)
@@ -260,6 +264,7 @@ windowrulev2 = size 1300 900, class:floating
 windowrulev2 = float, title:^(Discord)
 windowrulev2 = size 1280 729, title:^(Discord)
 windowrulev2 = center, title:^(Discord)
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = Alt_R
