--- a/.config/sherlock/config.toml
+++ b/.config/sherlock/config.toml
@@ -1,26 +1,46 @@
 [default_apps]
-teams                   =   "teams-for-linux --enable-features=UseOzonePlatform --ozone-platform=wayland --url {meeting_url}"
-calendar_client         =   "thunderbird"                           # For fetching event tile data
-terminal                =   "kitty"                                 # Used to start applications
+teams = "teams-for-linux --enable-features=UseOzonePlatform --ozone-platform=wayland --url {meeting_url}"
+calendar_client = "thunderbird"
+terminal = "kitty"
 
 [debug]
-try_surpress_errors     =   true                                    # Disables the error screen for errors
-try_surpress_warnings   =   false                                   # Disables the error screen for warnings
+try_suppress_errors     =   false                                   
+try_suppress_warnings   =   true                                    
+app_paths               =   ["~/.local/share/applications/"]        
+
+[units]
+lengths                 =   "meter"
+weights                 =   "kg"
+volumes                 =   "l"
+temperatures            =   "C"
 
 [appearance]
-width                   =   900                                     # Sets the width of the main window
-height                  =   593                                     # Sets the height of the main window
-gsk_renderer            =   "cairo"                                 # Sets the rendering engine. [ngl, cairo, ]
-recolor_icons           =   false                                   # If set to true, uses the [icon-name]-symbolic icons
-icon_paths              =   ["~/.config/sherlock/icons"]            # Sets where the application should look for custom icons
-icon_size               =   22                                      # Sets the icon size for the tiles
+width                   =   900                                       
+height                  =   593                                       
+gsk_renderer            =   "cairo"                                   
+recolor_icons           =   false                                     
+icon_paths              =   [ "~/.config/sherlock/icons"]             
+icon_size               =   22                                        
+search_icon             =   true                                        
+use_base_css            =   true
+status_bar              =   true
+opacity                 =   1.0
 
 [behavior]
-caching                 =   false                                   # If set to true, will enable caching
-cache                   =   "~/.cache/sherlock_desktop_cache.json"  # Sets the location for caching files
-daemonize               =   false                                   # Enables deamon mode
-animation               =   true                                    # Enables startup animations
+caching                 =   true                                    
+cache                   =   "~/.cache/sherlock_desktop_cache.json"  
+daemonize               =   false                                   
+animate                 =   true                                    
+global_prefix           =   ""                                   
+global_flags            =   ""                                    
 
 [binds]
-next = "tab"
-prev = "shift-tab"
+prev                    =   "shift-tab"                           
+next                    =   "tab"                                  
+modifier                =   "control"                               
+
+[files]
+fallback                =   "~/.config/sherlock/fallback.json"
+css                     =   "~/.config/sherlock/gruvbox.css"
+alias                   =   "~/.config/sherlock/sherlock_alias.json"
+ignore                  =   "~/.config/sherlock/sherlockignore"
