binding for pan zoom in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,7 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 
-
+bind-key -n C-Space resize-pane -Z
 
 # set status bar
 set -g status-style bg=default
