--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,19 @@ set -g mouse on
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',alacritty:RGB'
 set-option -ga terminal-overrides ',alacritty:Tc'
-# set-option -sa terminal-features ',kitty:RGB'
-# set-option -ga terminal-overrides ',kitty:Tc'
+set-option -sa terminal-features ',kitty:RGB'
+set-option -ga terminal-overrides ',kitty:Tc'
 set-option -g default-terminal "screen-256color"
 set-option -g focus-events on
+set-option -g allow-rename on
+
+setw -g aggressive-resize on
+
+bind S setw synchronize-panes
+bind-key -n C-a display-panes
+
+bind-key c new-window \; clear-history
+bind-key x kill-pane \; clear-history
 
 set-window-option -g mode-keys vi # enable vim keys
 set-option -g history-limit 100000
@@ -39,50 +48,45 @@ unbind '"' # Split horizontally
 bind | split-window -h
 bind - split-window -v
 
-bind -r C-g display-popup -w 80% -h 80% -E "lazygit" # open lazygit whenever
+bind -n C-g display-popup -w 95% -h 95% -E "lazygit" # open lazygit whenever
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
 bind-key -n C-Space resize-pane -Z
 
-# set status bar
-set -g status-style bg=default
+### Status bar
+set -g status-position top
+set -g status on
+set -g status-style bg=default,fg=#e4e4e4
 
-# right side
+# Status Left — Session name (yellow)
+set -g status-left-length 100
+set -g status-left '#[fg=#FFDD33,bold] [#S] ❯ #[default]'
+
+# Status Right — Git branch, Time, Date, Host
 set -g status-right-length 300
 set -g status-right-style bold
-set -g status-right '❮#[fg=yellow] %H:%M #[fg=default]|#[fg=blue] %d.%m.%y #[fg=default]| #[fg=red]@#[fg=cyan]#H '
+set -g status-right '#[fg=#9e95c7] #(cd "#{pane_current_path}" && git rev-parse --abbrev-ref HEAD 2>/dev/null || echo "-") #[fg=#f5f5f5]|#[fg=#FFDD33] %H:%M #[fg=#f5f5f5]|#[fg=#96a6c8] %d.%m.%y #[fg=#f5f5f5]| #[fg=#f43841]@#[fg=#73D936]#H #[default]'
 
+### Windows
+# Current window: lime green
+set-window-option -g window-status-current-format '#[fg=#73D936,bold] #I:#W* #[default]'
 
-# left side
-set -g status-left-length 100
-set -g status-left ' #[fg=magenta,bold][#S]#[fg=default] ❯ '
+# Inactive windows: light gray
+set-window-option -g window-status-format '#[fg=#f5f5f5] #I:#W #[default]'
 
-# current window
-set-window-option -g window-status-current-format '#[fg=green,bold] #I #W*'
+### Pane borders
+set -g pane-border-style fg=#555555
+set -g pane-active-border-style fg=magenta
 
-# other windows
-set-window-option -g window-status-format '#[fg=default] #I #W '
-
-# panes
- set -g pane-active-border-style fg=magenta
- set -g pane-border-style fg='#555555'
-
-set -g status-position "top"
-
+### Messages & copy mode
+set -g message-style bg=#282828,fg=#FFDD33
+set -g message-command-style bg=#282828,fg=#9e95c7
+set -g mode-style bg=#282828,fg=#FFDD33,bold
 
 set -g default-terminal "${TERM}"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or light
-set -g @plugin 'srcery-colors/srcery-tmux'
-
-run -b ~/.tmux/themes/srcery-tmux/srcery.tmux
-run '~/.tmux/plugins/tpm/tpm'
