--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -246,11 +246,11 @@ windowrulev2 = float, class:^(firefoxdeveloperedition)
 windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
 windowrulev2 = center, class:^(firefoxdeveloperedition)
 
-windowrulev2 = float, title:^(Picture-in-Picture)
+windowrulev2 = float, title:^(Picture-in-Picture)$
 windowrulev2 = size 400 220, title:^(Picture-in-Picture)
-# windowrulev2 = move 100%-w-10 100%-w-35, title:^(Picture-in-Picture)
-windowrule = move 1493 834, title:^(Picture-in-Picture)
-windowrulev2 = pin, title:^(Picture-in-Picture)
+windowrulev2 = move 100%-w-10 100%-w-35, title:^(Picture-in-Picture)$
+# windowrule = move 1493 834, title:^(Picture-in-Picture)$
+windowrulev2 = pin, title:^(Picture-in-Picture)$
 windowrule = roundingpower 2.0, title:^(Picture-in-Picture)
 windowrule = rounding 2, title:^(Picture-in-Picture)
 
