--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,6 +17,26 @@
 #monitor = DP-2, 3840x2160@240.08400, 0x0, 2
 monitor = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525, 3840x2160@480, 0x0, 2
 
+# monitorv2 {
+#     output = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525
+#     mode = 3840x2160@144
+#     position = 0x0
+#     scale = 2
+#     bitdepth = 10
+#     cm = hdr
+#     sdrbrightness = 1.3
+#     sdrsaturation = 1.2
+#
+#     supports_wide_color = 1
+#     supports_hdr = 1
+#
+#     sdr_min_luminance = 0.01
+#     sdr_max_luminance = 250
+#     min_luminance = 0.01
+#     max_luminance = 800
+#     max_avg_luminance = 250
+# }
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
