a bit of transprencty for now

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,6 +24,7 @@ font_size 20.0
 
 window_padding_width 0
 window_margin_width 0
+background_opacity 0.5
 
 # enabled_layouts vertical,stack
 map kitty_mod+m toggle_layout stack
