add keyborad layout to hyprlock

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,6 +13,12 @@ general {
     disable_loading_bar = false
 }
 
+# LABEL
+label {
+  position = 0, 80
+  text = $LAYOUT
+}
+
 # INPUT FIELD
 input-field {
     monitor =
