--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,23 +18,23 @@
 monitor = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525, 3840x2160@480, 0x0, 2
 
 # monitorv2 {
-#     output = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525
-#     mode = 3840x2160@144
-#     position = 0x0
-#     scale = 2
-#     bitdepth = 10
-#     cm = hdr
-#     sdrbrightness = 1.3
-#     sdrsaturation = 1.2
-#
-#     supports_wide_color = 1
-#     supports_hdr = 1
-#
-#     sdr_min_luminance = 0.01
-#     sdr_max_luminance = 250
-#     min_luminance = 0.01
-#     max_luminance = 800
-#     max_avg_luminance = 250
+    # output = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525
+    # mode = 3840x2160@144
+    # position = 0x0
+    # scale = 2
+    # bitdepth = 10
+    # cm = hdr
+    # sdrbrightness = 1.3
+    # sdrsaturation = 1.2
+    #
+    # supports_wide_color = 1
+    # supports_hdr = 1
+    #
+    # sdr_min_luminance = 0.01
+    # sdr_max_luminance = 250
+    # min_luminance = 0.01
+    # max_luminance = 800
+    # max_avg_luminance = 250
 # }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -166,7 +166,7 @@ decoration {
 }
 
 animations {
-	enabled=0
+	enabled=1
 	# bezier=overshot,0.05,0.9,0.1,1.1
 	bezier = overshot,0.13,0.99,0.29,1.1
 	bezier = linear, 0.0, 0.0, 1.0, 1.0
@@ -286,6 +286,7 @@ windowrulev2 = float, title:^(Discord)
 windowrulev2 = size 1280 729, title:^(Discord)
 windowrulev2 = center, title:^(Discord)
 
+windowrule = noscreenshare, title:^(Bitwarden)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = Alt_R
