--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,5 +1,5 @@
 gui:
   border: single
 os:
-editCommand: 'nvim'
-editCommandTemplate: '{{editor}} --server /tmp/nvim-server.pipe --remote-tab "$(pwd)/{{filename}}"'
+  editCommand: 'nvim'
+  editCommandTemplate: '{{editor}} +{{line}} {{filename}}'
