--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -65,14 +65,15 @@ $volume = $scripts/set-volume
 $terminal = kitty
 $fileManager = $terminal -e yazi
 # $menu = wofi --show drun
-# $menu = rofi -show drun
-$menu = sherlock
+$menu = rofi -show drun
+$winMenu = rofi -show window
+#$menu = sherlock
 # $browser = sh -c "brave --ozone-platform-hint=auto"
 $browser = brave
 $floating_terminal = $terminal
 
 exec-once = eww deamon
-exec-once = eww open-many main bar
+exec-once = eww open main
 # exec-once = $scripts/auto_hide_bar.sh
 
 # Some default env vars.
@@ -298,6 +299,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, W, exec, $winMenu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 #bind = $mainMod, B, exec, $browser
