--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -4,6 +4,12 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
+# listener {
+#     timeout = 0
+#     on-resume = bash -c 'pidof eww && eww kill; sleep 0.2; eww open main'
+#     on-unlock = bash -c 'pidof eww && eww kill; sleep 0.2; eww open main'
+# }
+
 listener {
     timeout = 150                                # 2.5min.
     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
