--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -191,7 +191,7 @@ master {
 
 gestures {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	workspace_swipe = off
+  gesture = 3, down, mod: ALT, close
 }
 
 misc {
