--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -101,8 +101,8 @@ input {
     kb_layout = us,rs,rs
 		kb_variant = ,,latin
 		kb_model =
-	# kb_options = grp:alt_space_toggle
-		kb_options = grp:win_space_toggle
+    kb_options = grp:alt_space_toggle
+		# kb_options = grp:win_space_toggle
 		kb_rules =
 
 		follow_mouse = 1
@@ -138,8 +138,8 @@ general {
 
 decoration {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	rounding = 0
-  rounding_power = 0
+	rounding = 4
+  rounding_power = 4
 
 	blur {
 		enabled = true
@@ -162,7 +162,7 @@ decoration {
 	}
 
 	dim_inactive = false
-	dim_strength = 0.1
+	dim_strength = 0.5
 	dim_special = 0
 }
 
@@ -290,7 +290,7 @@ windowrulev2 = center, title:^(Discord)
 windowrule = noscreenshare, title:^(Bitwarden)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = Alt_R
+$mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
