--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,6 +14,8 @@ font_family      Iosevka
 # bold_font        auto
 # bold_italic_font auto
 
+font_family Victor Mono Nerd Font
+
 # issue when I add "Regular" at the end of the font_family like this:
 # font_family MartianMono Nerd Font Mono Regular <--
 # font_family MartianMono Nerd Font Mono
@@ -24,7 +26,7 @@ font_size 20.0
 
 window_padding_width 0
 window_margin_width 0
-background_opacity 0.8
+background_opacity 0.6
 background_blur 10
 
 # enabled_layouts vertical,stack
