testin new font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,14 +7,18 @@
 # bold_font        auto
 # bold_italic_font auto
 
-font_family      Iosevka
+# font_family      Iosevka
 # bold_font        auto
 # bold_italic_font auto
 # font_family      0xProto
 # bold_font        auto
 # bold_italic_font auto
 
-font_family Victor Mono Nerd Font
+font_famil Victor Mono Nerd Font
+font_family      VictorMono Nerd Font Mono Light
+bold_font        VictorMono Nerd Font Mono
+italic_font      VictorMono Nerd Font Mono Light Italic
+bold_italic_font VictorMono Nerd Font Mono Italic
 
 # issue when I add "Regular" at the end of the font_family like this:
 # font_family MartianMono Nerd Font Mono Regular <--
@@ -22,11 +26,11 @@ font_family Victor Mono Nerd Font
 # bold_font        auto
 # bold_italic_font auto
 
-font_size 20.0
+font_size 15.0
 
 window_padding_width 0
 window_margin_width 0
-background_opacity 0.6
+background_opacity 0.8
 background_blur 10
 
 # enabled_layouts vertical,stack
