--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 set -s escape-time 0
 set -g mouse on
 
+set -g default-command "${SHELL}"
+
 set -g default-terminal "tmux-256color"
 set-option -sa terminal-features ',alacritty:RGB'
 set-option -ga terminal-overrides ',alacritty:Tc'
