--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -35,6 +35,8 @@ background_blur 10
 
 # enabled_layouts vertical,stack
 map kitty_mod+m toggle_layout stack
+map ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+enter new_window_with_cwd
 
 shell_integration no-cursor
 cursor_shape block
