--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -2,6 +2,9 @@ general {
     lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+
+    on_unlock_cmd = eww open main
+    # unlock_cmd = eww open main
 }
 
 # listener {
