--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,6 +49,8 @@ exec-once = systemctl --user start hyprpolkitagent
 
 exec-once = hypridle
 
+exec-once = hyproled -s -a 0:2100:3840:60 # prevent oled burn for static stuff like bar
+
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 
@@ -83,7 +85,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE, 1
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1.5
 env = QT_SCALE_FACTOR,1.5
 env = QT_FONT_DPI,134
 
@@ -167,9 +169,9 @@ decoration {
 }
 
 animations {
-	enabled=1
-	# bezier=overshot,0.05,0.9,0.1,1.1
-	bezier = overshot,0.13,0.99,0.29,1.1
+	enabled = false
+	bezier = overshot,0.05,0.9,0.1,1.1
+	# bezier = overshot,0.13,0.99,0.29,1.1
 	bezier = linear, 0.0, 0.0, 1.0, 1.0
 	animation = windows,1,4,overshot,slide
 	animation = border,1,10,overshot
@@ -306,13 +308,13 @@ bind = $mainMod SHIFT, J, togglesplit, # dwindle
 #bind = $mainMode, B, exec, blender
 bind = $mainMod SHIFT, Q, exec, $floating_terminal --class floating
 
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
-bind = SUPER SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
-bind = SUPER SHIFT, 2, exec, sh ~/.config/hypr/scripts/screenshot monitor
+bind = ALT , V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = ALT SHIFT, 1, exec, sh ~/.config/hypr/scripts/screenshot area
+bind = ALT SHIFT, 2, exec, sh ~/.config/hypr/scripts/screenshot monitor
 
 bind = SUPER, B, exec, sh ~/.dotfiles/.config/hypr/scripts/wallpaper_changer
-bind = SUPER SHIFT, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher dark
-bind = SUPER, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher light
+# bind = SUPER SHIFT, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher dark
+# bind = SUPER, T, exec, sh ~/.dotfiles/.config/hypr/scripts/theme-switcher light
 
 # Move focus with mainMod + arrow keys
 # bind = $mainMod, left, movefocus, l
