--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,18 +7,17 @@
 # bold_font        auto
 # bold_italic_font auto
 
-# font_family      Iosevka
-# bold_font        auto
-# bold_italic_font auto
-# font_family      0xProto
-# bold_font        auto
-# bold_italic_font auto
+font_family      Iosevka
 
-font_famil Victor Mono Nerd Font
-font_family      VictorMono Nerd Font Mono Light
-bold_font        VictorMono Nerd Font Mono
-italic_font      VictorMono Nerd Font Mono Light Italic
-bold_italic_font VictorMono Nerd Font Mono Italic
+#font_family      0xProto
+#bold_font        auto
+#bold_italic_font auto
+
+#font_family      Victor Mono Nerd Font
+#font_family      VictorMono Nerd Font Mono Light
+#bold_font        VictorMono Nerd Font Mono
+#italic_font      VictorMono Nerd Font Mono Light Italic
+#bold_italic_font VictorMono Nerd Font Mono Italic
 
 # issue when I add "Regular" at the end of the font_family like this:
 # font_family MartianMono Nerd Font Mono Regular <--
