add telegram img viewer as floating and centered window

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -291,6 +291,11 @@ windowrulev2 = center, title:^(Discord)
 
 windowrule = noscreenshare, title:^(Bitwarden)
 
+# telegram media viewer center and floating
+windowrule = float, title:^(Media viewer), class:^(org.telegram.desktop)
+windowrule = size 1280 729, title:^(Media viewer), class:^(org.telegram.desktop)
+windowrule = center, title:^(Media viewer), class:^(org.telegram.desktop)
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
