--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,12 +6,16 @@ set -g mouse on
 
 set -g default-command "${SHELL}"
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set-option -sa terminal-features ',alacritty:RGB'
 set-option -ga terminal-overrides ',alacritty:Tc'
 set-option -sa terminal-features ',kitty:RGB'
 set-option -ga terminal-overrides ',kitty:Tc'
-set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",screen-256color:Tc"
+set -g default-terminal "screen-256color"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 set-option -g focus-events on
 set-option -g allow-rename on
 
