--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -123,9 +123,9 @@ input {
 
 general {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	gaps_in = 5
-	gaps_out = 5
-	border_size = 2
+	gaps_in = 0
+	gaps_out = 0
+	border_size = 0
 	# col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
 	col.active_border = rgba(1694CFFF)
 	col.inactive_border = rgba(595959aa)
@@ -140,8 +140,8 @@ general {
 
 decoration {
 	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	rounding = 4
-  rounding_power = 4
+    rounding = 0
+    rounding_power = 0
 
 	blur {
 		enabled = true
@@ -163,7 +163,7 @@ decoration {
 		sharp = false
 	}
 
-	dim_inactive = false
+	dim_inactive = true
 	dim_strength = 0.5
 	dim_special = 0
 }
@@ -301,10 +301,10 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod, C, killactive,
+bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, W, exec, $winMenu
 bind = $mainMod, P, pseudo, # dwindle
@@ -371,7 +371,7 @@ binde=,K,resizeactive,0 -10
 binde=,J,resizeactive,0 10
 
 # use reset to go back to the global submap
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 
 # will reset the submap, which will return to the global submap
 submap=reset
@@ -417,3 +417,4 @@ bindl=, XF86AudioMute, exec, $volume --toggle
 
 bind = $mainMod, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN { val = $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}'); val = (val - 0.5 < 1.0) ? 1.0 : val - 0.5; print val }")
 bind = $mainMod, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}")
+bind = $mainMode, mouse:274, exec, hyprctl keyword cursor:zoom_factor 1 # restart zooming
