refactor hyrpland config with new window rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,23 +18,23 @@
 monitor = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525, 3840x2160@480, 0x0, 2
 
 # monitorv2 {
-    # output = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525
-    # mode = 3840x2160@144
-    # position = 0x0
-    # scale = 2
-    # bitdepth = 10
-    # cm = hdr
-    # sdrbrightness = 1.3
-    # sdrsaturation = 1.2
-    #
-    # supports_wide_color = 1
-    # supports_hdr = 1
-    #
-    # sdr_min_luminance = 0.01
-    # sdr_max_luminance = 250
-    # min_luminance = 0.01
-    # max_luminance = 800
-    # max_avg_luminance = 250
+# output = desc:LG Electronics LG ULTRAGEAR+ 407NTZN9U525
+# mode = 3840x2160@144
+# position = 0x0
+# scale = 2
+# bitdepth = 10
+# cm = hdr
+# sdrbrightness = 1.3
+# sdrsaturation = 1.2
+#
+# supports_wide_color = 1
+# supports_hdr = 1
+#
+# sdr_min_luminance = 0.01
+# sdr_max_luminance = 250
+# min_luminance = 0.01
+# max_luminance = 800
+# max_avg_luminance = 250
 # }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -95,162 +95,163 @@ env = HYPRLAND_TRACE=1 AQ_TRACE=1
 
 # unscale XWayland
 xwayland {
-  force_zero_scaling = true
+    force_zero_scaling = true
 }
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us,rs,rs
-		kb_variant = ,,latin
-		kb_model =
+    kb_variant = ,,latin
+    kb_model =
     kb_options = grp:alt_space_toggle
-		# kb_options = grp:win_space_toggle
-		kb_rules =
+    # kb_options = grp:win_space_toggle
+    kb_rules =
 
-		follow_mouse = 1
-		natural_scroll = yes
-		scroll_factor = 1
+    follow_mouse = 1
+    natural_scroll = yes
+    scroll_factor = 1
 
-		repeat_rate = 50
-		repeat_delay = 200
+    repeat_rate = 50
+    repeat_delay = 200
 
-		touchpad {
-			natural_scroll = no
-		}
+    touchpad {
+        natural_scroll = no
+    }
 
-	sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
 general {
-	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	gaps_in = 0
-	gaps_out = 0
-	border_size = 0
-	# col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-	col.active_border = rgba(1694CFFF)
-	col.inactive_border = rgba(595959aa)
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 0
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(1694CFFF)
+    col.inactive_border = rgba(595959aa)
 
-	layout = dwindle
-	# layout = master
+    layout = dwindle
+    # layout = master
 
-	# Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-	allow_tearing = false
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    allow_tearing = false
 }
 
 
 decoration {
-	# See https://wiki.hyprland.org/Configuring/Variables/ for more
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     rounding = 0
     rounding_power = 0
 
-	blur {
-		enabled = true
-		xray = true
-		special = false
-		new_optimizations = true
-		size = 7
-		passes = 4
-		brightness = 1
-		noise = 0.01
-		contrast = 1
-		popups = true
-		popups_ignorealpha = 0.6
-	}
+    blur {
+        enabled = true
+        xray = true
+        special = false
+        new_optimizations = true
+        size = 7
+        passes = 4
+        brightness = 1
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+    }
 
-	shadow {
-		range = 4
-		render_power = 3
-		sharp = false
-	}
+    shadow {
+        range = 4
+        render_power = 3
+        sharp = false
+    }
 
-	dim_inactive = true
-	dim_strength = 0.5
-	dim_special = 0
+    dim_inactive = true
+    dim_strength = 0.5
+    dim_special = 0
 }
 
 animations {
-	enabled = false
-	bezier = overshot,0.05,0.9,0.1,1.1
-	# bezier = overshot,0.13,0.99,0.29,1.1
-	bezier = linear, 0.0, 0.0, 1.0, 1.0
-	animation = windows,1,4,overshot,slide
-	animation = border,1,10,overshot
-	animation = fade,1,10,overshot
-	animation = workspaces,1,6,overshot,slidevert
-	animation = borderangle, 1, 100, linear, loop
+    enabled = false
+    bezier = overshot,0.05,0.9,0.1,1.1
+    # bezier = overshot,0.13,0.99,0.29,1.1
+    bezier = linear, 0.0, 0.0, 1.0, 1.0
+    animation = windows,1,4,overshot,slide
+    animation = border,1,10,overshot
+    animation = fade,1,10,overshot
+    animation = workspaces,1,6,overshot,slidevert
+    animation = borderangle, 1, 100, linear, loop
 }
 
 dwindle {
-	# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-	pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-	preserve_split = yes # you probably want this
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = yes # you probably want this
 }
 
 master {
-	# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-	# new_is_master =  true
+    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    # new_is_master =  true
 }
 
 gestures {
-	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-  gesture = 3, down, mod: ALT, close
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    gesture = 3, down, mod: ALT, close
 }
 
 misc {
-	# See https://wiki.hyprland.org/Configuring/Variables/ for more
-	force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 
-	enable_swallow = true
-	swallow_regex = ^(kitty)$
-  mouse_move_enables_dpms = true
-  key_press_enables_dpms = true
+    enable_swallow = true
+    swallow_regex = ^(kitty)$
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
 }
 
 binds {
-	pass_mouse_when_bound = false
-	scroll_event_delay = 0
-  movefocus_cycles_fullscreen = true # allow movefocus to switch between fullscreen apps
+    pass_mouse_when_bound = false
+    scroll_event_delay = 0
+    movefocus_cycles_fullscreen = true # allow movefocus to switch between fullscreen apps
 }
 
 cursor {
-	enable_hyprcursor = true
-	zoom_rigid = false # set cursor in the center
-	zoom_factor = 1.0
-  no_hardware_cursors = true
+    enable_hyprcursor = true
+    zoom_rigid = false # set cursor in the center
+    zoom_factor = 1.0
+    zoom_detached_camera = false
+    no_hardware_cursors = true
 }
 
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-	name = epic-mouse-v1
-	sensitivity = -0.5
+    name = epic-mouse-v1
+    sensitivity = -0.5
 }
 
 plugin {
-	hyprbars {
-		bar_height = 28
-		bar_text_size = 8
-		bar_padding = 8
-		bar_title_enabled = true
-		bar_color = rgb(1e1e1e)
-		#col.text = $foreground
-		bar_text_font = Jetbrains Mono Nerd Font Mono Bold
-		bar_button_padding = 12
-		bar_precedence_over_border = true
-		bar_part_of_window = true
+    hyprbars {
+        bar_height = 28
+        bar_text_size = 8
+        bar_padding = 8
+        bar_title_enabled = true
+        bar_color = rgb(1e1e1e)
+        #col.text = $foreground
+        bar_text_font = Jetbrains Mono Nerd Font Mono Bold
+        bar_button_padding = 12
+        bar_precedence_over_border = true
+        bar_part_of_window = true
 
 
-		# example buttons (R -> L)
-		# hyprbars-button = color, size, on-click
-		hyprbars-button = rgb(ff4040), 20,  , hyprctl dispatch killactive
-		hyprbars-button = rgb(eeee11), 20,  , hyprctl dispatch fullscreen 2
-		hyprbars-button = rgb(11eeee), 20, 󰛓 , hyprctl dispatch togglefloating
-	}
+        # example buttons (R -> L)
+        # hyprbars-button = color, size, on-click
+        hyprbars-button = rgb(ff4040), 20,  , hyprctl dispatch killactive
+        hyprbars-button = rgb(eeee11), 20,  , hyprctl dispatch fullscreen 2
+        hyprbars-button = rgb(11eeee), 20, 󰛓 , hyprctl dispatch togglefloating
+    }
 }
 
 debug {
-  disable_logs = true
+    disable_logs = true
 }
 
 # Layers
@@ -258,43 +259,108 @@ debug {
 #layerrule = blur,notifications
 
 # Window rules
-windowrulev2 = suppressevent maximize, class:.*
-windowrulev2 = float, title:^(meet.google.com)
-windowrulev2 = float, class:^(yad)
-windowrule = float, title:(Open File)
-windowrule = center, title:(Open File)
-windowrule = size 600 400, title:(Open File)
+windowrule {
+    name = windowrule-1
+    suppress_event = maximize
+    match:class = .*
+}
+
+windowrule {
+    name = float google meet sharing indicator
+    float = on
+    match:title = ^(meet.google.com)
+}
+
+windowrule {
+    name = windowrule-3
+    float = on
+    match:class = ^(yad)
+}
+
+windowrule {
+    name = windowrule-4
+    float = on
+    center = on
+    size = 600 400
+    match:title = (Open File)
+}
+
 # windowrule for firefox dev tools when it's detatch from window
-windowrulev2 = float, class:^(firefoxdeveloperedition)
-windowrulev2 = size 1100 700, class:^(firefoxdeveloperedition)
-windowrulev2 = center, class:^(firefoxdeveloperedition)
+windowrule {
+    name = firefox floating dev tools
+    float = on
+    size = 1100 700
+    center = on
+    match:class = ^(firefoxdeveloperedition)
+}
 
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = size 400 220, title:^(Picture-in-Picture)
-windowrulev2 = move 100%-w-10 100%-w-35, title:^(Picture-in-Picture)$
-# windowrule = move 1493 834, title:^(Picture-in-Picture)$
-windowrulev2 = pin, title:^(Picture-in-Picture)$
-windowrule = roundingpower 2.0, title:^(Picture-in-Picture)
-windowrule = rounding 2, title:^(Picture-in-Picture)
 
-# windowrule for Brave dev tools when it's detatch form window
-windowrulev2 = float, title:^(DevTools)
-windowrulev2 = size 1100 700, title:^(DevTools)
-windowrulev2 = center, title:^(DevTools)
-windowrulev2 = noblur, title:^()$, class:^()$
-windowrulev2 = float, class:floating
-windowrulev2 = size 1300 900, class:floating
+windowrule {
+    name = PiP video floating at the edge of the screen
+    float = on
+    move = ((monitor_w*1)-window_w-10) ((monitor_h*1)-window_h-35)
+    pin = on
+    size = 400 220
+    rounding_power = 2.0
+    rounding = 2
+    match:title = ^(Picture-in-Picture)$
+}
+# windowrule {
+#   size = 400 220
+#   rounding_power = 2.0
+#   rounding = 2
+#   match:title = ^(Picture-in-Picture)
+# }
 
-windowrulev2 = float, title:^(Discord)
-windowrulev2 = size 1280 729, title:^(Discord)
-windowrulev2 = center, title:^(Discord)
+windowrule {
+    name = Brave dev tools when it's detatch form window
+    float = on
+    size = 1100 700
+    center = on
+    match:title = ^(DevTools)
+}
 
-windowrule = noscreenshare, title:^(Bitwarden)
+windowrule {
+    name = windowrule-9
+    no_blur = on
+    match:title = ^()$
+    match:class = ^()$
+}
+
+windowrule {
+    name = windowrule-10
+    float = on
+    size = 1300 900
+    match:class = floating
+}
+
+
+windowrule {
+    name = floating discrod client
+    float = on
+    size = 1280 729
+    center = on
+    match:title = ^(Discord)
+}
+
+
+windowrule {
+    name = hide bitwarden on sahred screen
+    no_screen_share = on
+    match:title = ^(Bitwarden)
+}
+
 
 # telegram media viewer center and floating
-windowrule = float, title:^(Media viewer), class:^(org.telegram.desktop)
-windowrule = size 1280 729, title:^(Media viewer), class:^(org.telegram.desktop)
-windowrule = center, title:^(Media viewer), class:^(org.telegram.desktop)
+windowrule {
+    name = float center telegram files viewer
+    float = on
+    size = 1280 729
+    center = on
+    match:title = ^(Media viewer)
+    match:class = ^(org.telegram.desktop)
+}
+
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
