--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -81,8 +81,9 @@ exec-once = eww open main
 # Some default env vars.
 # env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
-
+# Cursor size
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = GDK_SCALE, 1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1.5
@@ -92,6 +93,19 @@ env = QT_FONT_DPI,134
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 env = HYPRLAND_TRACE=1 AQ_TRACE=1
+
+# allow better support for screen sharing (Google Meet, Discord, etc)
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+# force all apps to use wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+env = XDG_SESSION_TYPE,wayland
 
 # unscale XWayland
 xwayland {
@@ -347,9 +361,13 @@ windowrule {
 windowrule {
     name = hide bitwarden on sahred screen
     no_screen_share = on
+    tag = +floating-window
     match:title = ^(Bitwarden)
 }
 
+windowrule = float on, match:tag floating-window
+windowrule = center on, match:tag floating-window
+windowrule = size 875 600, match:tag floating-window
 
 # telegram media viewer center and floating
 windowrule {
