--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -144,12 +144,21 @@ general {
     col.active_border = rgba(1694CFFF)
     col.inactive_border = rgba(595959aa)
 
+    # layout = scrolling
     layout = dwindle
     # layout = master
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
+
+# scrolling {
+#   follow_focus = false
+#   fullscreen_on_one_column = true
+#   direction = right
+#   follow_min_visible = 0.33
+#   # follow_min_visible = 0.03
+# }
 
 
 decoration {
@@ -500,5 +509,8 @@ bindl=, XF86AudioMute, exec, $volume --toggle
 # bind = $mainMod SHIFT, mouse_up, exec, hyprctl keyword cursor:zoom_factor 1
 
 bind = $mainMod, mouse_up, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN { val = $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}'); val = (val - 0.5 < 1.0) ? 1.0 : val - 0.5; print val }")
-bind = $mainMod, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}")
-bind = $mainMode, mouse:274, exec, hyprctl keyword cursor:zoom_factor 1 # restart zooming
+bind = $mainMod, mouse_down, exec, hyprctl keyword cursor:zoom_factor $(awk "BEGIN {print $(hyprctl getoption cursor:zoom_factor | grep 'float:' | awk '{print $2}') + 0.5}") bind = $mainMode, mouse:274, exec, hyprctl keyword cursor:zoom_factor 1 # restart zooming
+
+
+bind = ALT_L, mouse_up, layoutmsg, move +col
+bind = ALT_L, mouse_down, layoutmsg, move -col
